2016-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Make hashing digester and hmac digester movable.
 * Add a `set` member to the `jcursor` that overwrites old values in JSON structures.

2016-09-26  Kirit Saelensminde  <kirit@felspar.com>
 * Add logging messages about why a JWT gets rejected.
 * We need to have `<` defined on JSON so do that instead of `std::less`.

2016-09-24  Kirit Saelensminde  <kirit@felspar.com>
 Added `std::less` overload for JSON with new `fost/json` header.

2016-09-17  Kirit Saelensminde  <kirit@felspar.com>
 The colourised logger now considers logging levels around each level when choosing a colour.

2016-09-16  Kirit Saelensminde  <kirit@felspar.com>
 Remove direct calls to `boost::spirit::parse` due to threading problems.

2016-09-10  Kirit Saelensminde  <kirit@felspar.com>
 *Initial version of new splitter API that uses views to cut down on memory allocations.
 * Add additional APIs for `utf::u8_view`

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
 Allow construction and assignment of `fostlib::json` from nullable atomic types.

2016-09-05  Kirit Saelensminde  <kirit@felspar.com>
 * Added a UTF8 string view
 * Added a JSON parse overload for UTF8 buffers and added extra tests.

2016-08-27  Kirit Saelensminde  <kirit@felspar.com>
 * Add `json_embedded_parser` which doesn't allow whitespace around the JSON.
 * Add default constructors to the JSON parsers so they can be const constructed.

2016-08-04  Kirit Saelensminde  <kirit@felspar.com>
 Ensure that the lengths match before comparing the data in `crypto_compare`.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Added initial support for minting and checking JWT.
 * Extra information for the `not_implemented` constructor can now be anything coercible to JSON. Also remove the exception from the `fost/core` header.
 * Make public a `jcursor` constructor so we can copy part of another one.
 * `jcursor` parts can be compared for equaility with string literals.